[package]
name = "public-mdbooks"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.40"
clap = { version = "4.5.32", features = ["derive"] }
env_logger = "0.11.7"
git-digger = "0.1.6"
log = "0.4.27"
mdbook = "0.4.48"
serde = { version = "1.0.219", features = ["derive"] }
serde_yaml = "0.9.34"
toml = "0.8.20"
